k8s/labs/chat-microservices/k8s/chatter-a/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatter-a
  namespace: chat-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatter-a
  template:
    metadata:
      labels:
        app: chatter-a
    spec:
      containers:
      - name: chatter
        image: chatter:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
