k8s/labs/chat-microservices/k8s/chatter-a/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chatter-a-svc
  namespace: chat-lab
spec:
  selector:
    app: chatter-a
  ports:
  - port: 3000
    targetPort: 3000
