k8s/labs/chat-microservices/k8s/chatter-a/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatter-a
  namespace: chat-lab
spec:
  rules:
  - host: chat.local
    http:
      paths:
      - path: /api/a
        pathType: Prefix
        backend:
          service:
            name: chatter-a-svc
            port:
              number: 3000
